src/pages/cabinet/cabinet.css
.cabinet-container10 {
  width: 100%;
  display: block;
  min-height: 100vh;
}
 
.cabinet-thq-expertise-page-elm1 {
  border: 2px dashed rgba(120, 120, 120, 0.4);
}
 
.cabinet-container11 {
  display: none;
}
 
.cabinet-container12 {
  display: contents;
}
 
.cabinet-container13 {
  display: none;
}
 
.cabinet-container14 {
  display: contents;
}
 
.cabinet-thq-hero-overlay-elm2 {
  width: 1200px;
  height: 606px;
}
 
.cabinet-text10 {
  font-weight: 700;
}
 
.cabinet-text12 {
  font-weight: 700;
}
 
.cabinet-text14 {
  font-weight: 700;
}
 
.cabinet-container15 {
  display: none;
}
 
.cabinet-container16 {
  display: contents;
}
 
.cabinet-container17 {
  display: none;
}
 
.cabinet-container18 {
  display: contents;
}
 
.cabinet-thq-hero-scroll-indicator-elm {
  border: 2px dashed rgba(120, 120, 120, 0.4);
}
 
.cabinet-container19 {
  display: none;
}
 
.cabinet-container20 {
  display: contents;
}
 
.cabinet-container21 {
  display: none;
}
 
.cabinet-container22 {
  display: contents;
}

